# redhook

./: Cargo.toml  test.sh
examples/fakeroot/: Cargo.toml
examples/fakeroot/src/: lib.rs
examples/neverfree/: Cargo.toml
examples/neverfree/src/: lib.rs
examples/readlink/: Cargo.toml
examples/readlink/src/: lib.rs
examples/readlinkspy/: Cargo.toml
examples/readlinkspy/src/: lib.rs
examples/safereadlinkspy/: Cargo.toml
examples/safereadlinkspy/src/: lib.rs
examples/spwantrace/: Cargo.toml
examples/spwantrace/src/: lib.rs
examples/varopenspy/: testprog
examples/varprintspy/: Cargo.toml
examples/varprintspy/src/: lib.rs  libtest.c  test.c
src/: ld_preload.rs  lib.rs
