[package]
name = "redhook"
version = "1.0.0"
authors = ["Geoffrey Thomas <geofft@ldpreload.com>"]
description = "Dynamic function call interposition / hooking (LD_PRELOAD) for Rust"
repository = "https://github.com/geofft/redhook"
readme = "README.md"
keywords = ["LD_PRELOAD", "interposition"]
license = "BSD-2-Clause"

[dependencies]
libc = "0.2"
paste = "1.0.0"
tracing = { version = "0.1.17" }
tracing-appender = {version =  "0.1.1"}
tracing-subscriber = {version = "0.2.9", features = ["chrono", "env-filter", "fmt"]}
