[package]
name = "redhook_ex_neverfree"
version = "0.1.0"
authors = ["Geoffrey Thomas <geofft@ldpreload.com>"]
edition = "2018"

[lib]
name = "neverfree"
crate_type = ["dylib"]

[dependencies.redhook]
path = "../.."
tracing = { version = "0.1.17" }
tracing-appender = {version =  "0.1.1"}
tracing-subscriber = {version = "0.2.9", features = ["chrono", "env-filter", "fmt"]}

