[package]
name = "redhook_ex_readlinkspy"
version = "0.0.1"
authors = ["Geoffrey Thomas <geofft@ldpreload.com>"]

[lib]
name = "readlinkspy"
crate_type = ["cdylib"]

[dependencies.redhook]
path = "../.."

[dependencies]
libc = "0.2"
ctor = "0.1.15"
paste = "1.0.0"
tracing = { version = "0.1.17" }
tracing-appender = {version =  "0.1.1"}
tracing-subscriber = {version = "0.2.9", features = ["chrono", "env-filter", "fmt"]}
