[package]
name = "redhook_ex_safereadlinkspy"
version = "0.1.0"
authors = ["Saravanan Shanmugham <sarvi@cisco.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "safereadlinkspy"
crate_type = ["dylib"]

[dependencies.redhook]
path = "../.."

[dependencies]
libc = "0.2"
ctor = "0.1.15"
paste = "1.0.0"
tracing = { version = "0.1.17" }
tracing-appender = {version =  "0.1.1"}
tracing-subscriber = {version = "0.2.9", features = ["chrono", "env-filter", "fmt"]}


