[package]
name = "redhook_ex_varprintspy"
version = "0.0.1"
authors = ["Sarvi Shanmugham <sarvi@yahoo.com>"]


[lib]
name = "varprintspy"
crate_type = ["cdylib"]

[dependencies.redhook]
path = "../.."

[dependencies]
ctor = "0.1.15"
libc = { version = "0.2" }
paste = "1.0.0"
tracing = { version = "0.1.17" }
tracing-appender = {version =  "0.1.1"}
tracing-subscriber = {version = "0.2.9", features = ["chrono", "env-filter", "fmt"]}
